# flyhigh

./: .gitignore  CMakeLists.txt  Makefile  flyhigh.files  flyhigh.includes  flyhigh.spec
debian/DEBIAN/: control.template
doc/sql/: tableHowTo
src/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  main.cpp
src/analysis/: CMakeLists.txt  FlightExpWindow.cpp  FlightExpWindow.h  FlightWindow.cpp  FlightWindow.h  GliderWindow.cpp  GliderWindow.h  IGCFileParser.cpp  KmlWriter.cpp  OLCWebForm.cpp  ServicingWindow.cpp  ServicingWindow.h
src/common/: CMakeLists.txt
src/common/container/: AirSpaceList.cpp  CMakeLists.txt  ContainerDef.h  FlightPointList.cpp  FlightPointList.h  Glider.cpp  Glider.h  Route.cpp  Servicing.h
src/common/elevation/: Elevation.cpp
src/common/form/: AccountForm.ui  AirSpaceForm.ui  CMakeLists.txt  FlightForm.ui  FlightFormImpl.cpp  GliderForm.ui  GliderFormImpl.cpp  MDIWindow.cpp  MDIWindow.h  RouteForm.ui  RouteFormImpl.cpp  ServicingForm.ui  ServicingFormImpl.cpp  TableWindow.cpp  UploadForm.ui  WayPointForm.ui  WayPointFormImpl.cpp
src/common/map/: CMakeLists.txt  MapTile.cpp  MapView.cpp  MapView.h  SwissMap100.cpp
src/common/parser/: CMakeLists.txt  OpenAirFileParser.cpp
src/common/qextmedia/: qexifimageheader.cpp  qexifimageheader.h
src/common/utils/: CMakeLists.txt  GnuPlot.cpp  simplecrypt.cpp
src/common/webmap/: CMakeLists.txt  WebMap.cpp  WebMap.h  WebMapAirSpace.cpp  WebMapAirSpace.h  WebMapAirSpaceView.cpp  WebMapFlight.cpp  WebMapFlight.h  WebMapFlightView.cpp  WebMapFlightView.h  WebMapPage.cpp  WebMapPage.h  WebMapRoute.cpp  WebMapRoute.h  WebMapRouteView.cpp  WebMapWayPoint.cpp  WebMapWayPoint.h  WebMapWayPointView.cpp
src/common/window/: MDIWindow.cpp  MDIWindow.h  PhotoView.cpp  PhotoView.h  TableWindow.cpp  TableWindow.h
src/configuration/database/: CMakeLists.txt  FlyHighRCFrameImpl.cpp
src/configuration/flytec/: AcousticFrameImpl.h  CMakeLists.txt  DeviceFrameImpl.cpp  DisplayFrameImpl.cpp  GPSFrameImpl.cpp  MainFrame.ui  MainFrameImpl.cpp  MainFrameImpl.h  MemoryFrameImpl.cpp  PolareFrameImpl.cpp  UnitFrameImpl.cpp  VelocityFrameImpl.cpp
src/configuration/flytec6015/: AcousticFrame6015Impl.cpp  AcousticFrame6015Impl.h  CMakeLists.txt  CorrFrame6015Impl.cpp  CorrFrame6015Impl.h  DeviceFrame6015.ui  DeviceFrame6015Impl.cpp  DeviceFrame6015Impl.h  DisplayFrame6015Impl.cpp  DisplayFrame6015Impl.h  Frame6015.h  GPSFrame6015Impl.cpp  GPSFrame6015Impl.h  MainFrame6015.ui  MainFrame6015Impl.cpp  MainFrame6015Impl.h  MemoryFrame6015Impl.cpp  MemoryFrame6015Impl.h  UnitFrame6015.ui  UnitFrame6015Impl.cpp  UnitFrame6015Impl.h  VarioFrame6015.ui  VarioFrame6015Impl.cpp  VarioFrame6015Impl.h  VelocityFrame6015Impl.cpp  VelocityFrame6015Impl.h
src/configuration/interface/: CMakeLists.txt  IPortFrame.cpp
src/database/: CMakeLists.txt  IDbFile.cpp  IDbFile.h  IFlyHighRC.cpp  IFlyHighRC.h  IGPSDevice.cpp
src/database/flytec/: CMakeLists.txt  Device.cpp  Device.h  FlytecDevice.cpp  Protocol5020.cpp  Protocol6015.cpp
src/database/flytec6015/: CMakeLists.txt  Flytec6015.cpp  Protocol6015.cpp
src/database/garmin/: CMakeLists.txt  GarminFmt.cpp
src/database/sql/: Accounts.cpp  AirSpaces.cpp  CMakeLists.txt  DataBaseSub.cpp  Flights.cpp  Gliders.cpp  Pilots.cpp  QueryExecutor.cpp  QueryStore.cpp  Routes.cpp  Upgrade.cpp  Upgrade.h  WayPoints.cpp
src/images/: CMakeLists.txt  ImgCollection.cpp
src/preparation/: AirSpaceView.cpp  AirSpaceView.h  AirSpaceWindow.cpp  AirSpaceWindow.h  CMakeLists.txt  OpenAirFileParser.cpp  RouteWindow.cpp  RouteWindow.h  WayPointWindow.cpp  WayPointWindow.h  WptFileParser.cpp
src/res/: CMakeLists.txt  res.qrc
src/res/airspace/: airspace.html
src/res/airspace/js/: airspace.js  iairspace.js
src/res/flight/: flight.html
src/res/flight/js/: flight.js  iflight.js
src/res/lib/: CMakeLists.txt  markerclusterer.js  photo.js  webmap.js
src/res/route/: CMakeLists.txt  route.html
src/res/route/js/: fai.js  infobox.js  iroute.js  leg.js  measure.js  optimizer.js  route.js  turnpt.js  webmap.js
src/res/waypoint/: waypoint.html
src/res/waypoint/js/: iwaypoint.js  waypoint.js
src/settings/flyhigh/: DeviceConnectionParameters.cpp  DeviceConnectionWidget.cpp  FoldersWidget.ui  FoldersWidgetImpl.cpp  FoldersWidgetImpl.h  PilotInfoFrame.ui
src/settings/flytec/: AcousticFrame.ui  AcousticFrameImpl.cpp  AcousticFrameImpl.h  CorrFrame.ui  CorrFrameImpl.cpp  CorrFrameImpl.h  DeviceFrame.ui  DeviceFrameImpl.cpp  DeviceFrameImpl.h  DisplayFrame.ui  DisplayFrameImpl.cpp  DisplayFrameImpl.h  FlyCalcFrame.ui  FlyCalcFrameImpl.cpp  FlyCalcFrameImpl.h  GPSFrame.ui  GPSFrameImpl.cpp  GPSFrameImpl.h  MainFrame.ui  MemoryFrame.ui  MemoryFrameImpl.cpp  MemoryFrameImpl.h  PolareFrame.ui  PolareFrameImpl.cpp  PolareFrameImpl.h  SmsFrame.ui  SmsFrameImpl.cpp  SmsFrameImpl.h  UnitFrame.ui  UnitFrameImpl.cpp  UnitFrameImpl.h  VarioFrame.ui  VarioFrameImpl.cpp  VarioFrameImpl.h  VelocityFrame.ui  VelocityFrameImpl.cpp  VelocityFrameImpl.h
src/settings/flytec6015/: AcousticFrame6015.ui  AcousticFrame6015Impl.cpp  AcousticFrame6015Impl.h  CorrFrame6015.ui  CorrFrame6015Impl.cpp  CorrFrame6015Impl.h  DeviceFrame6015.ui  DeviceFrame6015Impl.cpp  DeviceFrame6015Impl.h  DisplayFrame6015.ui  DisplayFrame6015Impl.cpp  DisplayFrame6015Impl.h  GPSFrame6015.ui  GPSFrame6015Impl.cpp  GPSFrame6015Impl.h  MainFrame6015.ui  MainFrame6015Impl.cpp  MainFrame6015Impl.h  MemoryFrame6015.ui  MemoryFrame6015Impl.cpp  MemoryFrame6015Impl.h  UnitFrame6015.ui  UnitFrame6015Impl.cpp  UnitFrame6015Impl.h  VarioFrame6015.ui  VarioFrame6015Impl.cpp  VarioFrame6015Impl.h  VelocityFrame6015.ui  VelocityFrame6015Impl.cpp  VelocityFrame6015Impl.h
src/tools/dbmigrator/: DatabaseWidget.cpp
src/upload/: AccountWindow.cpp  AccountWindow.h  CMakeLists.txt  XContestUploader.cpp  XContestUploader.h
